@@ -376,7 +376,9 @@ class PeopleView:
         entries = [
             (gtk.STOCK_GO_BACK,self.parent.back_clicked,back_sensitivity),
             (gtk.STOCK_GO_FORWARD,self.parent.fwd_clicked,fwd_sensitivity),
-            (gtk.STOCK_HOME,self.parent.on_home_clicked,1),
+            #FIXME: revert to stock item when German gtk translation is fixed
+	    #(gtk.STOCK_HOME,self.parent.on_home_clicked,1),
+            (_("Home"),self.parent.on_home_clicked,1),
             (_("Add Bookmark"),self.parent.on_add_bookmark_activate,sel_sensitivity),
             (None,None,0),
             (gtk.STOCK_ADD, self.parent.add_button_clicked,1),
@@ -388,6 +390,11 @@ class PeopleView:
         menu.set_title(_('People Menu'))
         for stock_id,callback,sensitivity in entries:
             item = gtk.ImageMenuItem(stock_id)
+            #FIXME: remove when German gtk translation is fixed
+	    if stock_id == _("Home"):
+	    	im = gtk.image_new_from_stock(gtk.STOCK_HOME,gtk.ICON_SIZE_MENU)
+	    	im.show()
+		item.set_image(im)
             if callback:
                 item.connect("activate",callback)
             item.set_sensitive(sensitivity)
